[gd_scene load_steps=3 format=3 uid="uid://pqtbgfc1vpvb"]

[ext_resource type="Script" uid="uid://b16w1hdnjqojv" path="res://src/ui/bug_tally.gd" id="1_62qdp"]
[ext_resource type="Texture2D" uid="uid://c7unrtppju8yv" path="res://assets/Sprites/bugs/doodle_ladybug.png" id="1_rd0ve"]

[node name="BugTally" type="VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
mouse_filter = 0
theme_override_constants/separation = -5
script = ExtResource("1_62qdp")

[node name="TextureRectDoodle" type="TextureRect" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_rd0ve")
expand_mode = 2

[node name="RTLBugName" type="RichTextLabel" parent="."]
layout_mode = 2
theme_override_colors/default_color = Color(0.12549, 0.156863, 0.32549, 1)
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
bbcode_enabled = true
text = "[b]Bugname"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainerTallies" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = -5

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
